Fix grid layout for image wrapper on tablet

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -7,6 +7,7 @@
 		flex-direction: column;
 		width: 100%;
 		position: relative;
+		align-self: center;
 
 		.top-element-wrapper {
 			display: flex;
@@ -422,6 +423,16 @@
 
 		.two-col-img-wrapper {
 			gap: 2.5rem !important;
+			display: grid !important;
+			grid-template-columns: repeat(2, 1fr);
+
+			img {
+				object-fit: cover !important;
+				object-position: center center;
+				width: 100%;
+				align-self: center;
+				height: 100%;
+			}
 		}
 	}
 
